fix(ui): sidebar stretching outside view

--- a/components/views/navigation/sidebar/Sidebar.less
+++ b/components/views/navigation/sidebar/Sidebar.less
@@ -73,9 +73,10 @@
     }
   }
 
-
   .sidebar-inner-streaming {
-    max-height: calc(var(--app-height) - @sidebar-inner-offset - @sidebar-inner-streaming-pad);
+    max-height: calc(
+      var(--app-height) - @sidebar-inner-offset - @sidebar-inner-streaming-pad
+    );
   }
 
   .controls {
@@ -84,7 +85,6 @@
     padding: @light-spacing @normal-spacing @normal-spacing @normal-spacing;
     box-shadow: @ui-shadow;
   }
-  
 
   .filler {
     flex: 1;
@@ -182,8 +182,16 @@
       max-height: calc(var(--app-height) - @mobile-sidebar-inner-offset);
     }
     .sidebar-inner-streaming {
-      max-height: calc(var(--app-height) - @sidebar-inner-offset - @mobile-sidebar-inner-streaming-pad);
+      max-height: calc(
+        var(--app-height) - @sidebar-inner-offset -
+          @mobile-sidebar-inner-streaming-pad
+      );
     }
+  }
+
+  .desktop #sidebar {
+    width: calc(@sidebar-size-mobile - @slimbar-size) !important;
+    min-width: calc(@sidebar-size-mobile - @slimbar-size) !important;
   }
 }
 
